# automated-research-report-generation

./: README.md  pyproject.toml  requirements.txt
notebook/: test.ipynb
research_and_analyst/backend_server/: workflow.py
research_and_analyst/notebook/: test.ipynb
research_and_analyst/prompt_lib/: prompts.py
research_and_analyst/utils/: model_loader.py
